# fun-with-raft

./: Cargo.toml  build.rs
proto/: rpc.proto
src/: communication.rs  main.rs  raft.rs
