[package]
name = "fun-with-raft2"
version = "0.1.0"
authors = ["Govardhan G D <govardhangdg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }   
tonic = "0.2.1"
rand = "0.7.3"
chrono = "0.4.11" 
prost = "0.6.1"    

[build-dependencies]
tonic-build = "0.2.0"